make the build script executable on github ci

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -27,6 +27,7 @@ jobs:
       - name: Run a multi-line script
         run: |
           echo "hello from main yml"
+          chmod +x ./build.sh
           echo "building ..."
           ./build.sh
           echo "done"
