--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -6,20 +6,25 @@ name: cali ci
 
 # Controls when the workflow will run
 on:
-  push:
-    branches: [ "*" ]
+	push:
+		branches: [ "*" ]
 
-  # Allows you to run this workflow manually from the Actions tab
-  workflow_dispatch:
+	# Allows you to run this workflow manually from the Actions tab
+	workflow_dispatch:
 
 jobs:
-  build:
-    runs-on: ubuntu-latest
+	os_matrix:
+		strategy:
+			matrix:
+				os: [ubuntu-latest, macos-latest]
 
-    steps:
-      - uses: actions/checkout@v3
+	build:
+		runs-on: ${{ matrix.os }}
 
-      - name: build and run
-        run: |
-          ./run.sh
+		steps:
+			- uses: actions/checkout@v3
+
+			- name: build and run
+				run: |
+					./run.sh arg1 arg_two
 
