use run.sh in yml

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -24,10 +24,7 @@ jobs:
       run: |
         brew reinstall gcc
 
-    - name: build
+    - name: build and run
       run: |
-        bash ./build.sh
-    - name: run
-      run: |
-        ./build/cali
+        ./run.sh
 
