--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -8,13 +8,9 @@ jobs:
 
     name: test on ${{ matrix.os }}
     runs-on: ${{ matrix.os }}
-#    defaults:
-#      run:
-#        shell: bash
     strategy:
       matrix:
         os: [ubuntu-latest, macos-latest, windows-latest]
-        #os: [ubuntu-latest, macos-latest]
 
     steps:
 
@@ -24,7 +20,13 @@ jobs:
       run: |
         brew reinstall gcc
 
+    - if: matrix.os == 'windows-latest'
+      name: build only on windows
+      run: |
+        bash ./build.sh
+
+    - if: matrix.os != 'windows-latest'
     - name: build and run
       run: |
-        bash ./run.sh
+        ./run.sh
 
