--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -26,7 +26,7 @@ jobs:
         bash ./build.sh
 
     - if: matrix.os != 'windows-latest'
-    - name: build and run
+      name: build and run
       run: |
         ./run.sh
 
