--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -16,8 +16,10 @@ add_compile_options("-fopenmp")
 add_compile_options("-Wno-tabs")
 add_compile_options("-Wno-maybe-uninitialized")
 
+#add_compile_options("-std=gnu")
+#add_compile_options("-pedantic") # pedantic warns about convert='big_endian'
+
 # TODO: debug-only.  For release use -O3
-add_compile_options("-pedantic")
 add_compile_options("-fbounds-check")
 add_compile_options("-fbacktrace")
 
