fix char length bug; more int casting

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -12,18 +12,18 @@ project(${PROJECT} Fortran)
 
 ## TODO: one of these compiler flags is breaking the unicode functionality. Figure out which one and why
 
-#add_compile_options("-Wall")
-#add_compile_options("-Wextra")
-#add_compile_options("-fopenmp")
-#add_compile_options("-Wno-tabs")
-#add_compile_options("-Wno-maybe-uninitialized")
-#
-##add_compile_options("-std=gnu")
-##add_compile_options("-pedantic") # pedantic warns about convert='big_endian'
-#
-## TODO: debug-only.  For release use -O3
-#add_compile_options("-fbounds-check")
-#add_compile_options("-fbacktrace")
+add_compile_options("-Wall")
+add_compile_options("-Wextra")
+add_compile_options("-fopenmp")
+add_compile_options("-Wno-tabs")
+add_compile_options("-Wno-maybe-uninitialized")
+
+#add_compile_options("-std=gnu")
+#add_compile_options("-pedantic") # pedantic warns about convert='big_endian'
+
+# TODO: debug-only.  For release use -O3
+add_compile_options("-fbounds-check")
+add_compile_options("-fbacktrace")
 
 #=======================================================================
 
