--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -20,6 +20,10 @@ jobs:
       run: |
         brew reinstall gcc
 
+    - name: Update submodules
+      run: |
+        git submodule update --init --recursive
+
     - if: matrix.os == 'windows-latest'
       name: build only on windows
       run: |
