--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -12,23 +12,23 @@ project(${PROJECT} Fortran CXX)
 
 # TODO: release option
 
-add_compile_options("-Wall")
-add_compile_options("-Wextra")
-add_compile_options("-fopenmp")
-add_compile_options("-Wno-tabs")
-add_compile_options("-Wno-maybe-uninitialized")
-
-## TODO: need to segregate Fortran and CXX options
-#add_compile_options("-Werror")
-
-#add_compile_options("-std=gnu")
-#add_compile_options("-pedantic") # pedantic warns about convert='big_endian'
-
-# TODO: debug-only.  For release use -O3
-add_compile_options("-fbounds-check")
-add_compile_options("-fbacktrace")
-
-#add_compile_options("-O3")
+#add_compile_options("-Wall")
+#add_compile_options("-Wextra")
+#add_compile_options("-fopenmp")
+#add_compile_options("-Wno-tabs")
+#add_compile_options("-Wno-maybe-uninitialized")
+#
+### TODO: need to segregate Fortran and CXX options
+##add_compile_options("-Werror")
+#
+##add_compile_options("-std=gnu")
+##add_compile_options("-pedantic") # pedantic warns about convert='big_endian'
+#
+## TODO: debug-only.  For release use -O3
+#add_compile_options("-fbounds-check")
+#add_compile_options("-fbacktrace")
+#
+##add_compile_options("-O3")
 
 #=======================================================================
 
